pages/docs/react/v0.10.0/hooks-context.mdx
---
title: useContext Hook
description: "Details about the useContext React hook in ReScript"
canonical: "/docs/react/latest/hooks-context"
---

# useContext

<Intro>

Context provides a way to pass data through the component tree without having to pass props down manually at every level. The `useContext` hooks gives access to such Context values.

</Intro>

> **Note:** All the details and rationale on React's context feature can be found in [here](./context).

## Usage

```res
let value = React.useContext(myContext)
```

Accepts a `React.Context.t` (the value returned from `React.createContext`) and returns the current context value for that context. The current context value is determined by the value prop of the nearest `<MyContext.Provider>` above the calling component in the tree.

## Examples

### A Simple ThemeProvider

<CodeTab labels={["ReScript", "JS Output"]}>

```res
// App.res
module ThemeContext = {
  let context = React.createContext("light")

  module Provider = {
    let provider = React.Context.provider(context)

    @react.component
    let make = (~value, ~children) => {
      React.createElement(provider, {"value": value, "children": children})
    }
  }
}

module ThemedButton = {
  @react.component
  let make = () => {
    let theme = React.useContext(ThemeContext.context)
    let (color, backgroundColor) = switch theme {
    | "dark" => ("#ffffff", "#222222")
    | "light" | _ => ("#000000", "#eeeeee")
    }

    let style = ReactDOMStyle.make(~color, ~backgroundColor, ())

    <button style> {React.string("I am a styled button!")} </button>
  }
}

module Toolbar = {
  @react.component
  let make = () => {
    <div> <ThemedButton /> </div>
  }
}

@react.component
let make = () => {
  <ThemeContext.Provider value="dark">
    <div> <Toolbar /> </div>
  </ThemeContext.Provider>
}
```

```js
var context = React.createContext("light");

var provider = context.Provider;

function ThemeContext$Provider(Props) {
  var value = Props.value;
  var children = Props.children;
  return React.createElement(provider, {
    value: value,
    children: children,
  });
}

var Provider = {
  provider: provider,
  make: ThemeContext$Provider,
};

var ThemeContext = {
  context: context,
  Provider: Provider,
};

function ThemedButton(Props) {
  var theme = React.useContext(context);
  var match;
  switch (theme) {
    case "dark":
      match = ["#ffffff", "#222222"];
      break;
    case "light":
      match = ["#000000", "#eeeeee"];
      break;
    default:
      match = ["#000000", "#eeeeee"];
  }
  var style = {
    backgroundColor: match[1],
    color: match[0],
  };
  return React.createElement(
    "button",
    {
      style: style,
    },
    "I am a styled button!",
  );
}

var ThemedButton = {
  make: ThemedButton,
};

function Toolbar(Props) {
  return React.createElement(
    "div",
    undefined,
    React.createElement(ThemedButton, {}),
  );
}

var Toolbar = {
  make: Toolbar,
};

function App(Props) {
  return React.createElement(ThemeContext$Provider, {
    value: "dark",
    children: React.createElement(
      "div",
      undefined,
      React.createElement(Toolbar, {}),
    ),
  });
}
```

</CodeTab>
